--- a/gantt.css
+++ b/gantt.css
@@ -39,6 +39,7 @@
     display: inline-block;
     height: 10px;
     background-color: rgb(63, 127, 127);
+    border: thin rgb(47, 95, 95) solid;
 }
 
 .complete {
